--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,8 @@ html {
 *::after {
     box-sizing: inherit;
 }
+
+header {
+    background: url(../img/banner.png) no-repeat center center;
+    background-size: cover;
+}
