add fonts and colors to headings

--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,12 @@ html {
 }
 
 @font-face {
-    font-family: "Romance Fatal Serif Std"
-    src: url("fonts/romancefatalserif.ttf") format("truetype");
-    src: url("fonts/romancefatalserif.eot") format("eot"),
-        url("fonts/romancefatalserif.otf") format("opentype"),
-        url("fonts/romancefatalserif.woff") format("woff"),
-        url("fonts/romancefatalserif.svg") format("svg");
-    font-weight:normal;
-    font-style: normal;
+    font-family: 'Romance Fatal Serif Std';
+    src:url('../fonts/romancefatalserifstd.eot') format('eot');
+    src:url('../fonts/romancefatalserifstd.ttf') format('truetype'),
+        url('../fonts/romancefatalserifstd.otf') format('opentype'),
+        url('../fonts/romancefatalserifstd.woff') format('woff'),
+        url('../fonts/romancefatalserifstd.woff2') format('woff2');
 }
 
 header {
@@ -25,15 +23,31 @@ header {
 }
 
 header img {
-    width: 45%;
+    width: 50%;
     height:auto;
     display: block;
     margin: auto;
-    padding-top: 2em;
+    padding-top: 30%;
 }
+
+h1,
+h2,
+h3{
+    font-family: "Romance Fatal Serif Std", Fallback, serif;
+    }
 
 h1 {
     color: #ffffff;
     text-align:center;
     padding-bottom: 2em;
+    font-family: 'Romance Fatal Serif Std', Fallback, serif;
+    font-size:3em;
+}
+
+h2 {
+    color: #39322a;
+}
+
+h3 {
+    color: #71271c;
 }
