--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,11 @@ h2 {
 h3 {
     color: #71271c;
 }
+
+.serif {
+    font-family: "Libre Baskerville", serif;
+}
+
+.sans {
+    font-family: "Lato", sans-serif;
+}
