--- a/css/main.css
+++ b/css/main.css
@@ -67,11 +67,6 @@ h3 {
     font-size: 1.5em;
 }
 
-h4 {
-    color: #534e2f;
-    font-size: 2em;
-}
-
 .serif {
     font-family: "Libre Baskerville", serif;
 }
@@ -88,3 +83,14 @@ h4 {
 }
 
 /* SIDEBAR CONTENT */
+#adjectives {
+    padding: 2em;
+}
+
+h4 {
+    color: #534e2f;
+    font-size: 2em;
+    display: inline;
+    text-align: center;
+    padding: 1em;
+}
