set mobile-first positioning of sample images

--- a/css/main.css
+++ b/css/main.css
@@ -100,3 +100,15 @@ h4 {
     text-align: center;
     padding: 1em;
 }
+
+.sampleimg {
+    text-align:center;
+    width: 100%;
+}
+
+#sign,
+#diners,
+#diagon {
+    width: 70%;
+    height: auto;
+}
