--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,18 @@ h1 {
     box-shadow: 0 2px 10px 5px #cfcfcf;
 }
 
+@media (min-width: 600px) {
+    #logo {
+        width: 15%;
+        height: auto;
+    }
+
+    h1 {
+        font-size: 3em;
+        margin-top: -0.3em;
+    }
+}
+
 h1,
 h2,
 h3,
