--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,18 @@ body {
     margin: auto;
 }
 
+@media (min-width: 700px) {
+    main {
+        float: right;
+        margin-left: 1.5em;
+        width: calc(100% / 3 * 2);
+    }
+
+    .sidebar {
+        float: left;
+        width: calc(100% / 3 - 1.5em);
+    }
+}
 
 /* HEADER CONTENT */
 #logo {
