--- a/css/main.css
+++ b/css/main.css
@@ -207,8 +207,16 @@ h4 {
     #diners,
     #diagon {
         display: inline-block;
-        width: 80%;
+        width: 40%;
         height: auto;
+    }
+}
+
+@media (min-width: 1200px) {
+    #sign,
+    #diners,
+    #diagon {
+        width: 80%;
     }
 }
 
